{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 54,
  "lineage": "4f1dc2bb-0f34-2d64-a93a-1656037c0ce7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:loadbalancer/app/my-strapi-app-lb/0c86b7a61b945eda",
            "arn_suffix": "app/my-strapi-app-lb/0c86b7a61b945eda",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-strapi-app-lb-753362233.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:loadbalancer/app/my-strapi-app-lb/0c86b7a61b945eda",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-strapi-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0916f39146c11af55"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e0bc4780c65c5b9"
              },
              {
                "subnet_id": "subnet-0a0f03926ada2d141"
              }
            ],
            "subnets": [
              "subnet-08e0bc4780c65c5b9",
              "subnet-0a0f03926ada2d141"
            ],
            "vpc_id": "vpc-068457239f58716c2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:listener/app/my-strapi-app-lb/0c86b7a61b945eda/924548a2f4581688",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:targetgroup/my-strapi-app-tg/958cfd59fed1e96e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:listener/app/my-strapi-app-lb/0c86b7a61b945eda/924548a2f4581688",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:loadbalancer/app/my-strapi-app-lb/0c86b7a61b945eda",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:targetgroup/my-strapi-app-tg/958cfd59fed1e96e",
            "arn_suffix": "targetgroup/my-strapi-app-tg/958cfd59fed1e96e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:713881826781:targetgroup/my-strapi-app-tg/958cfd59fed1e96e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:713881826781:loadbalancer/app/my-strapi-app-lb/0c86b7a61b945eda"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-strapi-app-tg",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_self_db_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3510539230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0916f39146c11af55",
            "security_group_rule_id": "sgr-089508641ceceefcd",
            "self": false,
            "source_security_group_id": "sg-0916f39146c11af55",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_self_https_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3572592847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0916f39146c11af55",
            "security_group_rule_id": "sgr-016d3949456fecb44",
            "self": false,
            "source_security_group_id": "sg-0916f39146c11af55",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:vpc-endpoint/vpce-0b40bebd81e6166ec",
            "dns_entry": [
              {
                "dns_name": "vpce-0b40bebd81e6166ec-eqva4ov8.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b40bebd81e6166ec-eqva4ov8-ap-south-1a.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b40bebd81e6166ec-eqva4ov8-ap-south-1b.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "api.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06531971LZCVDPZS2TCL"
              },
              {
                "dns_name": "ecr.ap-south-1.api.aws",
                "hosted_zone_id": "Z06278843O5BF1IUXQXCA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b40bebd81e6166ec",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08b3b923365b83fba",
              "eni-0e3a3d16e5fb81cc0"
            ],
            "owner_id": "713881826781",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0916f39146c11af55"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.60",
                "subnet_id": "subnet-0ddb5cb87e36781ab"
              },
              {
                "ipv4": "10.0.2.167",
                "subnet_id": "subnet-0488b02149e5e4750"
              }
            ],
            "subnet_ids": [
              "subnet-0488b02149e5e4750",
              "subnet-0ddb5cb87e36781ab"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:vpc-endpoint/vpce-0e4c951326e562c01",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4c951326e562c01-23ro6rd6.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0e4c951326e562c01-23ro6rd6-ap-south-1b.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0e4c951326e562c01-23ro6rd6-ap-south-1a.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06528011OIZXO6HY3SVX"
              },
              {
                "dns_name": "*.dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06528011OIZXO6HY3SVX"
              },
              {
                "dns_name": "dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z02708303EENZUXHDSK9F"
              },
              {
                "dns_name": "*.dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z02708303EENZUXHDSK9F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e4c951326e562c01",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00ba13a5bc6aec01e",
              "eni-0d20e75b646480842"
            ],
            "owner_id": "713881826781",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0916f39146c11af55"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.185",
                "subnet_id": "subnet-0ddb5cb87e36781ab"
              },
              {
                "ipv4": "10.0.2.178",
                "subnet_id": "subnet-0488b02149e5e4750"
              }
            ],
            "subnet_ids": [
              "subnet-0488b02149e5e4750",
              "subnet-0ddb5cb87e36781ab"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:vpc-endpoint/vpce-07fbe8d2510bca1dc",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-07fbe8d2510bca1dc",
            "owner_id": "713881826781",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d9342d56f9a4a5ce"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:network-acl/acl-025e23c0df8651639",
            "default_network_acl_id": "acl-025e23c0df8651639",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-025e23c0df8651639",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "713881826781",
            "subnet_ids": [
              "subnet-0488b02149e5e4750",
              "subnet-08e0bc4780c65c5b9",
              "subnet-0a0f03926ada2d141",
              "subnet-0ddb5cb87e36781ab"
            ],
            "tags": {
              "Name": "my-strapi-app-vpc-default"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-default"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:route-table/rtb-0ff3e8739bec4bec6",
            "default_route_table_id": "rtb-0ff3e8739bec4bec6",
            "id": "rtb-0ff3e8739bec4bec6",
            "owner_id": "713881826781",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-strapi-app-vpc-default"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:security-group/sg-0916f39146c11af55",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0916f39146c11af55",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "713881826781",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-strapi-app-vpc-default"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-default"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d66013a334b44ae",
            "arn": "arn:aws:ec2:ap-south-1:713881826781:elastic-ip/eipalloc-01d66013a334b44ae",
            "association_id": "eipassoc-0de542afa137d856f",
            "domain": "vpc",
            "id": "eipalloc-01d66013a334b44ae",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-06357eb40a0a487c0",
            "private_dns": "ip-10-0-101-233.ap-south-1.compute.internal",
            "private_ip": "10.0.101.233",
            "public_dns": "ec2-13-204-125-1.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.125.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-strapi-app-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-ap-south-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:internet-gateway/igw-0dd0382ae41edbaf1",
            "id": "igw-0dd0382ae41edbaf1",
            "owner_id": "713881826781",
            "tags": {
              "Name": "my-strapi-app-vpc"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d66013a334b44ae",
            "association_id": "eipassoc-0de542afa137d856f",
            "connectivity_type": "public",
            "id": "nat-00b5e9c495460ee36",
            "network_interface_id": "eni-06357eb40a0a487c0",
            "private_ip": "10.0.101.233",
            "public_ip": "13.204.125.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08e0bc4780c65c5b9",
            "tags": {
              "Name": "my-strapi-app-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-ap-south-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9342d56f9a4a5ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00b5e9c495460ee36",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d9342d56f9a4a5ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dd0382ae41edbaf1",
            "id": "r-rtb-03a3b482847c2f1fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a3b482847c2f1fa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:route-table/rtb-0d9342d56f9a4a5ce",
            "id": "rtb-0d9342d56f9a4a5ce",
            "owner_id": "713881826781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00b5e9c495460ee36",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-strapi-app-vpc-private"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-068457239f58716c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:route-table/rtb-03a3b482847c2f1fa",
            "id": "rtb-03a3b482847c2f1fa",
            "owner_id": "713881826781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd0382ae41edbaf1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-strapi-app-vpc-public"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-068457239f58716c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c52b60b6f40c5ea",
            "route_table_id": "rtb-0d9342d56f9a4a5ce",
            "subnet_id": "subnet-0ddb5cb87e36781ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092f4e3ce96b164ad",
            "route_table_id": "rtb-0d9342d56f9a4a5ce",
            "subnet_id": "subnet-0488b02149e5e4750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0993c3f0f760b21f9",
            "route_table_id": "rtb-03a3b482847c2f1fa",
            "subnet_id": "subnet-08e0bc4780c65c5b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f83a79dc58eb1abc",
            "route_table_id": "rtb-03a3b482847c2f1fa",
            "subnet_id": "subnet-0a0f03926ada2d141"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:subnet/subnet-0ddb5cb87e36781ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddb5cb87e36781ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713881826781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-strapi-app-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:subnet/subnet-0488b02149e5e4750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0488b02149e5e4750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713881826781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-strapi-app-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:subnet/subnet-08e0bc4780c65c5b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e0bc4780c65c5b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713881826781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-strapi-app-vpc-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:subnet/subnet-0a0f03926ada2d141",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0f03926ada2d141",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713881826781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-strapi-app-vpc-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-068457239f58716c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:713881826781:vpc/vpc-068457239f58716c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025e23c0df8651639",
            "default_route_table_id": "rtb-0ff3e8739bec4bec6",
            "default_security_group_id": "sg-0916f39146c11af55",
            "dhcp_options_id": "dopt-040e1b4ba45115d08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068457239f58716c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff3e8739bec4bec6",
            "owner_id": "713881826781",
            "tags": {
              "Name": "my-strapi-app-vpc"
            },
            "tags_all": {
              "Name": "my-strapi-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}